--- a/themes/coo/layout/_partial/header.ejs
+++ b/themes/coo/layout/_partial/header.ejs
@@ -9,16 +9,16 @@
                     <div class="md:text-xl text-slate-700 dark:text-slate-300 <%- is_home() ? "md:text-white" : "" %> md:mr-2">
                         <%- icon("search") %>
                     </div>
-                    <span class="hidden md:inline dark:text-slate-300">Search for cheatsheet</span>
+                    <span class="hidden md:inline dark:text-slate-300">Search for Code Reference</span>
                     <span class="hidden md:inline dark:text-slate-300 md:ml-2 text-sm leading-5 py-0.5 px-1.5 border <%- postPage ? "border-slate-400" : "border-slate-300" %> rounded-md">
                         <span class="font-sans">⌘</span>
                         <span class="font-sans">K</span>
                     </span>
                 </button>
-                <a href="<%- edit_page() %>" target="_blank">
+                <!-- <a href="<%- edit_page() %>" target="_blank">
                     <img alt="GitHub Repo stars" style="height: 26px; opacity: 0.8;" src="https://img.shields.io/github/stars/Fechin/reference?style=social">
-                </a>
-                <a href="https://twitter.com/FechinLi" target="_blank">
+                </a> -->
+                <!-- <a href="https://twitter.com/FechinLi" target="_blank">
                     <button type="button"
                             class="fadeIn inline-flex h-8 items-center rounded-full  bg-[#4d9feb] text-slate-100 ml-1 lg:ml-4 px-2 md:px-3 py-2 md:hover:opacity-80">
                         <div class="md:mr-2">
@@ -26,13 +26,13 @@
                         </div>
                         <span class="hidden md:inline text-sm">Follow Me</span>
                     </button>
-                </a>
+                </a> -->
                 <button id="darkMode" class="fadeIn inline-flex items-center justify-center flex-shrink-0 h-8 w-8 rounded-full text-gray-900 ml-1 lg:ml-4 dark:text-gray-300 bg-gray-200 dark:bg-gray-900">
                     <i class="icon-light text-gray-600 dark:text-gray-300 dark:hover:text-white">
                         <%- icon("light") %>
                     </i>
                 </button>
-                <a href="<%- share_link("facebook") %>" target="_blank">
+                <!-- <a href="<%- share_link("facebook") %>" target="_blank">
                     <button type="button"
                             class="fadeIn inline-flex h-8 w-8 justify-center items-center rounded-full bg-[#4a66ad] text-slate-100 ml-1 lg:ml-4 px-2 md:px-3 py-2 md:hover:opacity-80">
                         <span class="text-md">
@@ -40,8 +40,8 @@
                         </span>
                         <span class="hidden">Facebook</span>
                     </button>
-                </a>
-                <a href="<%- share_link("twitter") %>" target="_blank">
+                </a> -->
+                <!-- <a href="<%- share_link("twitter") %>" target="_blank">
                     <button type="button"
                             class="fadeIn inline-flex h-8 w-8 justify-center items-center rounded-full bg-[#4d9feb] text-slate-100 ml-1 lg:ml-4 px-2 md:px-3 py-2 md:hover:opacity-80">
                         <span class="text-md">
@@ -49,7 +49,7 @@
                         </span>
                         <span class="hidden">Twitter</span>
                     </button>
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
