--- a/themes/coo/layout/_partial/index/logo.ejs
+++ b/themes/coo/layout/_partial/index/logo.ejs
@@ -6,8 +6,9 @@
             </div>
         </div>
     <% } %>
-        <span class="domain text-slate-600 dark:text-slate-300 text-lg md:text-2xl">cheatsheets<span
-                class="text-emerald-400">.zip</span></span>
+        <span class="domain text-slate-600 dark:text-slate-300 text-lg md:text-2xl">code-reference<span
+                class="text-emerald-400">.dev</span>
+            </span>
 </a>
 <% if (page.layout == "note" || page._isNotePagination){ %>
     <a class="hidden md:block" href="/notes/">
