--- a/themes/coo/layout/_partial/index/request.ejs
+++ b/themes/coo/layout/_partial/index/request.ejs
@@ -1,4 +1,4 @@
-<section class="text-slate-800 max-container">
+<section class="text-slate-800 max-container" style="display: none">
     <div class=" mx-auto flex py-12 items-center justify-center flex-col">
         <span class="inline-block h-1 w-10 rounded-full bg-emerald-500 mt-8 mb-6"></span>
         <div class="text-center lg:w-2/3 w-full">
@@ -6,7 +6,7 @@
                 missing?</h3>
             <p class="mb-8 leading-relaxed dark:text-slate-300">
                 Feel free to contribute to the code on my GitHub repository or follow me to stay updated on the latest
-                cheat sheets in real-time,  it's a best chance to do it!
+                code reference in real-time,  it's a best chance to do it!
 
             </p>
             <div class="flex flex-col md:flex-row justify-center">
