--- a/themes/coo/layout/_partial/search.ejs
+++ b/themes/coo/layout/_partial/search.ejs
@@ -15,7 +15,7 @@
                         <input class="flex-1 font-light h-full bg-transparent focus:text-slate-900 text-slate-500 dark:text-slate-300 placeholder-slate-400 placeholder-opacity-80 shadow-none outline-none truncate text-lg sm:text-2xl caret-color-emerald-400 leading-normalized w-full appearance-none rounded-none transition-colors duration-200 ease-in-out"
                                id="mysearch-input"
                                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
-                               placeholder="Search for cheatsheet" maxlength="128" type="text"
+                               placeholder="Search for code reference" maxlength="128" type="text"
                                enterkeyhint="go">
                     </div>
                     <button id="mysearch-clear" type="reset"
