--- a/themes/coo/layout/_partial/head.ejs
+++ b/themes/coo/layout/_partial/head.ejs
@@ -50,4 +50,8 @@
         }
     </script>
 
+    <!-- Google ads -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3068336687184631"
+            crossorigin="anonymous"></script>
+
 </head>
