feat: 注明作者信息

--- a/themes/coo/layout/_partial/index/logo.ejs
+++ b/themes/coo/layout/_partial/index/logo.ejs
@@ -7,7 +7,7 @@
         </div>
     <% } %>
         <span class="domain text-slate-600 dark:text-slate-300 text-lg md:text-2xl">code-reference<span
-                class="text-emerald-400">.dev</span>
+                class="text-[#0f0f0f]">.dev</span>
             </span>
 </a>
 <% if (page.layout == "note" || page._isNotePagination){ %>
