--- a/themes/coo/layout/_partial/index/hero.ejs
+++ b/themes/coo/layout/_partial/index/hero.ejs
@@ -10,9 +10,12 @@
             </span>
             for Developers
         </h1>
+<!--        <h2 class="lg:w-2/3 text-center mx-auto text-xl text-slate-200 dark:text-slate-300 leading-tight font-extralight tracking-wide mt-10 mb-20">-->
+<!--            Welcome the ultimate repository of sheets and quick references meticulously crafted by the open community-->
+<!--            boost your productivity.-->
+<!--        </h2>-->
         <h2 class="lg:w-2/3 text-center mx-auto text-xl text-slate-200 dark:text-slate-300 leading-tight font-extralight tracking-wide mt-10 mb-20">
-            Welcome the ultimate repository of sheets and quick references meticulously crafted by the open community
-            boost your productivity.
+            Here are some cheatsheets and quick references contributed by open source angels.
         </h2>
         <div id="carbon_container"></div>
     </div>
